symfony/web-profiler-bundle hinzugefügt

--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "symfony/yaml": "5.4.*"
     },
     "require-dev": {
+        "symfony/web-profiler-bundle": "^5.4"
     },
     "config": {
         "allow-plugins": {
