--- a/composer.json
+++ b/composer.json
@@ -7,12 +7,21 @@
         "php": ">=7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "doctrine/annotations": "^1.13",
+        "doctrine/doctrine-bundle": "^2.7",
+        "doctrine/migrations": "^3.5",
+        "doctrine/orm": "^2.13",
+        "symfony/asset": "^5.4",
         "symfony/console": "5.4.*",
         "symfony/dotenv": "5.4.*",
         "symfony/flex": "^1.17|^2",
         "symfony/framework-bundle": "5.4.*",
         "symfony/runtime": "5.4.*",
-        "symfony/yaml": "5.4.*"
+        "symfony/security-bundle": "^5.4",
+        "symfony/twig-bundle": "^5.4",
+        "symfony/yaml": "5.4.*",
+        "twig/extra-bundle": "^3.4",
+        "twig/twig": "^3.4"
     },
     "require-dev": {
         "symfony/web-profiler-bundle": "^5.4"
