--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "symfony/dotenv": "5.4.*",
         "symfony/flex": "^1.17|^2",
         "symfony/framework-bundle": "5.4.*",
+        "symfony/maker-bundle": "^1.46",
         "symfony/runtime": "5.4.*",
         "symfony/security-bundle": "^5.4",
         "symfony/twig-bundle": "^5.4",
