--- a/.env
+++ b/.env
@@ -25,5 +25,5 @@ APP_SECRET=bba1b5a0effdc4645c51470f0097a03a
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
-DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=14&charset=utf8"
+DATABASE_URL="mysql://root:root@localhost/empireofworlds?serverVersion=14&charset=utf8"
 ###< doctrine/doctrine-bundle ###
